[metadata]
name=nvmitten
version = attr: nvmitten.__VERSION__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = A. Cheng, NVIDIA
author_email = alicheng@nvidia.com
description = MLPerf Inference Test Bench from NVIDIA
license = Apache 2.0 License
license_files = LICENSE

[options]
zip_safe = False
package_dir=
    =src
packages=find:
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    graphlib_backport >=1.0.3;python_version<'3.9'
    requests >=2.28.1
    tqdm >=4.65.0
    numpy >=1.22.0, <1.24.0
    GitPython >=3.1.31
    pandas
    opencv-python
    pybind11
    onnx

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.4
    pycodestyle
    pytest-cov
    pylint
    pyfakefs
    mock
